# burnwatch-sdk

./: .gitignore  DETECTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
burnwatch/: __init__.py  client.py  llm.py  x402.py
examples/: agentkit_example.py  crewai_example.py  killswitch.py  langchain_example.py  openai_spend.py  pagerduty_relay.py  quickstart.py  x402_wrapper.py
